--- a/SOSInventoryQBIntegration/Views/Home/Index.cshtml
+++ b/SOSInventoryQBIntegration/Views/Home/Index.cshtml
@@ -3,37 +3,56 @@
 
 }
 <div id="sosURL" hidden>@ViewBag.URI</div>
+<div class="container">
+    <div class="col-md-12">
+        <div class="col-md-5 float-start">
+            <strong>SOS Inventory</strong>
+            <br />
+            <div class="p-2 alert-warning">
+                <strong>Note!</strong> You need to connect to your SOS Inventory account.
+            </div>
 
-<div class="col-md-12">
-    <div class="col-md-5 float-start">
-        <strong>SOS Inventory</strong>
-        <br />
-        <div class="p-2 alert-warning">
-            <strong>Note!</strong> You need to connect to your SOS Inventory account.
+            <button onclick="location.href='@Url.Action("SOSAuthentication", "Home")'" class="btn btn-success btn-sm text-white mt-2  float-xxl-end ">Connect to SOS Inventory</button>
         </div>
+        <div class="col-md-5 float-end">
+            <strong>QuickBooks</strong>
+            <br />
+            <div class="p-2 alert-warning">
+                <strong>Note!</strong> You need to connect to your QuickBooks account.
+            </div>
 
-        <button onclick="location.href='@Url.Action("SOSAuthentication", "Home")'" class="btn btn-success btn-sm text-white mt-2  float-xxl-end ">Connect to SOS Inventory</button>
+            <button onclick="location.href='@Url.Action("QBCallback", "")'" class="btn btn-success btn-sm float-xxl-end  text-white mt-2">Connect to QuickBooks</button>
+        </div>
     </div>
-    <div class="col-md-5 float-end">
-        <strong>QuickBooks</strong>
-        <br />
-        <div class="p-2 alert-warning">
-            <strong>Note!</strong> You need to connect to your QuickBooks account.
+    <div class="col-md-12 row">
+        <div class="col-md-6">
+            <button id="sync_btn" onclick="startSyncData()" class="btn btn-info btn-sm float-xxl-end text-white mt-2">Start Syncing</button>
         </div>
-        
-        <button onclick="location.href='@Url.Action("QBCallback", "")'" class="btn btn-success btn-sm float-xxl-end  text-white mt-2">Connect to QuickBooks</button>
     </div>
 </div>
-
 <script>
 
-  function gotoSOS() {
-     var sosAPI = document.getElementById('sosURL').innerHTML;
-     let result = sosAPI.replace("amp", "");
-     let result1 = result.replace("&;", "&");
-     let result2 = result1.replace("&amp;", "&");
-     window.location.replace(result2);
-   }
+        function gotoSOS() {
+           var sosAPI = document.getElementById('sosURL').innerHTML;
+           let result = sosAPI.replace("amp", "");
+           let result1 = result.replace("&;", "&");
+           let result2 = result1.replace("&amp;", "&");
+           window.location.replace(result2);
+         }
 
+         function startSyncData() {
+             $.ajax({
+              type: "POST",
+              url: "@Url.Action("SyncData", "DataSyncing")",
+              beforeSend: function( xhr ) {
+                  $("#sync_btn").html("Syncing...")
+                  $("#sync_btn").prop("disabled", true);
+              }
+             })
+           .done(function( data ) {
+                  $("#sync_btn").html("Start Syncing")
+                  $("#sync_btn").removeAttr('disabled');
+           });
+         }
 
 </script>
