Added the Authentication and authorization of SOS and QB Application

--- a/SOSInventoryQBIntegration/Views/Authorization/QBAuth.cshtml
+++ b/SOSInventoryQBIntegration/Views/Authorization/QBAuth.cshtml
@@ -4,3 +4,9 @@
 @{
 }
 I'm authorized by quickbooks.
+<script>
+
+    localStorage.setItem("QB_Authorized", true)
+
+    window.location.replace("https://localhost:7219/");
+</script>
